2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates

2004-06-03  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/iround.h, Mercator/DepthShader.cpp, Mercator/Forest.cpp,
	  Mercator/Segment.cpp, Mercator/Terrain.cpp: Clean up use of the
	  I_ROUND macro by moving its definition into a build only header.

	* Mercator/Segment.cpp: Ensure floats are used not doubles in
	  calculations, and use the float version of libm calls where
	  apropriate.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.2.0, interface version 1.0.0

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Final tweak to rpm spec.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Tweak configure.ac.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* tests/testIntersect.cpp: Provide more details when getHeightAndNormal
	  test fails.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/BasePoint.cpp: Tweak roughnes and falloff to give nicer
	  looking terrain.

	* Mercator/Segment.cpp: Clarify the qRMD implementation function.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Get canonical system for cross compiling.

2004-05-17  Al Riddoch  <alriddoch@zepler.org>

	* Migrate to configure.ac and fix rpm spec.

2004-05-15  Al Riddoch  <alriddoch@zepler.org>

	* Switch to configure.ac, bump up version numbers, fix spec
	  and prepare for release.

2004-04-08  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp: Fix the normal calculation. Really right
	  now.

2004-04-07  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h, Mercator/Terrain.cpp: Fixes to be compatible
	  with other compilers.

	* Mercator/Segment.cpp: Fix seem normals, and avoid using variable
	  size local arrays, and handle systems with no rint.

	* Mercator/Forest.cpp, Mercator/DepthShader.cpp: Handle systems with
	  no rint.

2004-03-19  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/GrassShader.cpp: Fix uninitialised 0,0 corner tile
	  in grass shader.
